# Ocr-fatourat

./: .env.example  .gitignore  ARCHITECTURE.md  PLAN-bbox-management.md  PLAN-extraction.md  PLAN-frontend-rework.md  PLAN-ocr-integration.md  PLAN-table-structure.md  PLAN.md  README.md  docker-compose.yml
.claude/skills/example-skill/: SKILL.md
backend/: Dockerfile  Dockerfile.worker  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_ocr_jobs.py  0003_add_extractions.py
backend/app/: main.py
backend/app/api/v1/: auth.py  boxes.py  documents.py  extract.py  ocr.py  pages.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  box.py  document.py  extraction.py  ocr_job.py  page.py  user.py
backend/app/schemas/: auth.py  box.py  document.py  extraction.py  invoice.py  ocr.py
backend/app/services/: rasterize.py
backend/app/services/extract/: __init__.py  base.py  heuristic.py  normalize.py  ppstructure.py  registry.py  vlm.py
backend/app/services/ocr/: __init__.py  base.py  paddle.py  rapidocr.py  registry.py  stub.py  tesseract.py  util.py
backend/app/worker/: celery_app.py  tasks.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: ProtectedRoute.tsx  TopBar.tsx  UploadDropzone.tsx
frontend/src/components/editor/: BoxItem.tsx  BoxSidebar.tsx  ExtractionDialog.tsx  KonvaStage.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/hooks/: useAuth.ts  useBoxes.ts  useDocumentImage.ts  useDocuments.ts  useExtract.ts  useOcr.ts  usePageImage.ts
frontend/src/lib/: api.ts
frontend/src/pages/: DocumentsPage.tsx  EditorPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/stores/: authStore.ts  editorStore.ts
