[project]
name = "ocr-backend"
version = "0.1.0"
description = "OCR web app backend (FastAPI + SQLAlchemy 2.0)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "pillow>=10.3",
    "pymupdf>=1.24",
    "email-validator>=2.1",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Installed in the worker image (Dockerfile.worker) — the API never imports these.
ocr = [
    "rapidocr-onnxruntime>=1.3",
    "opencv-python-headless>=4.9",
    "pytesseract>=0.3.10",
]
# Heavy, opt-in: enables the native `paddle` OCR pipeline + PP-StructureV3
# table extractor. paddlex[ocr] provides the table/structure dependencies.
paddle = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "paddlex[ocr]>=3.7",
]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
